[gd_scene load_steps=6 format=3 uid="uid://ca2jmchoennjf"]

[ext_resource type="Script" path="res://scenes/minigame/siomai_plate.gd" id="1_0ntwb"]
[ext_resource type="Texture2D" uid="uid://n4icpba6ep1r" path="res://assets/minigame/siomai_plate/siomai_plate.png" id="1_l3mrj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3jyl"]
size = Vector2(150, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7plww"]
size = Vector2(150, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyfkb"]
size = Vector2(150, 20)

[node name="SiomaiPlate" type="Node2D"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = ExtResource("1_0ntwb")

[node name="ItemsNode" type="Node2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = null

[node name="PlateSprite" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1)
texture = ExtResource("1_l3mrj")

[node name="CatchAreas" type="Node2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
position = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)
skew = 0.0
script = null

[node name="LeftArea" type="Area2D" parent="CatchAreas"]
position = Vector2(-155, 30)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchAreas/LeftArea"]
shape = SubResource("RectangleShape2D_u3jyl")

[node name="MiddleArea" type="Area2D" parent="CatchAreas"]
position = Vector2(0, 30)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchAreas/MiddleArea"]
shape = SubResource("RectangleShape2D_7plww")

[node name="RightArea" type="Area2D" parent="CatchAreas"]
position = Vector2(155, 30)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchAreas/RightArea"]
shape = SubResource("RectangleShape2D_kyfkb")

[connection signal="area_entered" from="CatchAreas/LeftArea" to="." method="_on_left_area_area_entered"]
[connection signal="area_entered" from="CatchAreas/MiddleArea" to="." method="_on_middle_area_area_entered"]
[connection signal="area_entered" from="CatchAreas/RightArea" to="." method="_on_right_area_area_entered"]
